grammars/tree-sitter-svg-transform/test/corpus/transform.txt
================================================================================
Single translate
================================================================================

translate(10,20)

--------------------------------------------------------------------------------

(source_file
  (wsp)
  (transform_list
    (transform_function
      (translate_transform
        (number)
        (comma_wsp)
        (number))))
  (wsp))

================================================================================
Multiple functions whitespace-separated
================================================================================

translate(10 20) rotate(45) scale(2)

--------------------------------------------------------------------------------

(source_file
  (wsp)
  (transform_list
    (transform_function
      (translate_transform
        (number)
        (comma_wsp
          (wsp))
        (number)))
    (comma_wsp
      (wsp))
    (transform_function
      (rotate_transform
        (number)))
    (comma_wsp
      (wsp))
    (transform_function
      (scale_transform
        (number))))
  (wsp))

================================================================================
Matrix six args
================================================================================

matrix(1 0 0 1 0 0)

--------------------------------------------------------------------------------

(source_file
  (wsp)
  (transform_list
    (transform_function
      (matrix_transform
        (number)
        (comma_wsp
          (wsp))
        (number)
        (comma_wsp
          (wsp))
        (number)
        (comma_wsp
          (wsp))
        (number)
        (comma_wsp
          (wsp))
        (number)
        (comma_wsp
          (wsp))
        (number))))
  (wsp))

================================================================================
Rotate about a point and skews
================================================================================

rotate(45 50 50), skewX(10) skewY(20)

--------------------------------------------------------------------------------

(source_file
  (wsp)
  (transform_list
    (transform_function
      (rotate_transform
        (number)
        (comma_wsp
          (wsp))
        (number)
        (comma_wsp
          (wsp))
        (number)))
    (comma_wsp
      (wsp))
    (transform_function
      (skew_x_transform
        (number)))
    (comma_wsp
      (wsp))
    (transform_function
      (skew_y_transform
        (number))))
  (wsp))
